add image upload 1. fix tslint exceeds maximum line length of 120 error. 2. install the Multer middleware package. 3. add server side upload with the help of the Multer middleware package. 4. update the Angular frontend to fetch and update Posts with images:   a. convert the Form from a template driven to a reactive approach.   b. add a file input button.   c. add image controls to the reactive Form.   d. add an image preview.   e. add image Mime-Type Validator.

--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -5,3 +5,20 @@ mat-form-field, textarea {
 mat-spinner {
   margin: auto;
 }
+
+input[type="file"] {
+  visibility: hidden;
+}
+
+.pick-image-button {
+  margin-top: 16px;
+}
+
+.image-preview {
+  height: 80px;
+  margin: 16px 0;
+}
+
+.image-preview img {
+  height: 100%;
+}
